# eBookmark-Backend

./: Cargo.toml  README.md
src/: main.rs  prelude.rs  routes.rs
src/structs/: ebookmark.rs  mod.rs  request.rs
