[package]
name = "ebookmark_backend"
version = "0.1.0"
authors = ["Kaisei Yokoyama <yokoyama.kaisei.sm@alumni.tsukuba.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version="0.4", features = ["tera_templates"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
failure = "0.1"
